projects/ngx-testbox/testing/src/errors/NoElementByTestIdFoundError.ts
export class NoElementByTestIdFoundError extends Error {
  constructor(testId: string) {
    super(`Element with test ID "${testId}" not found`);
  }
}
